Fixing alignment, mobile layout, etc.
fixed landing page, and close all button styling

--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -70,8 +70,11 @@ form {
 }
 
 .welcome-section {
+    display: flex;
+    align-items: center;
     padding-top: 5rem;
     padding-bottom: 10rem;
+    height: 100vh;
 }
 
 .welcome-section h1,
@@ -83,6 +86,8 @@ h2 {
 .landing-intro {
     justify-content: center;
     text-align: center;
+    animation: transitionIn 1.2s;
+    animation-fill-mode: forwards;
 }
 
 
@@ -590,19 +595,6 @@ a:hover:after {
     background: rgb(65, 65, 65);
 }
 
-.close-button {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-}
-
-.close-button-icon {
-    position: sticky;
-    width: 100%;
-    margin: auto;
-}
-
 .project-images {
     width: 40vw;
 }
@@ -747,7 +739,7 @@ p.copyright {
     .close-button {
         display: none;
     }
-    .close-button-icon {
+    .close-button-text {
         display: none;
     }
     .project-disclaimer,
@@ -760,6 +752,20 @@ p.copyright {
 }
 
 @media only screen and (max-width: 800px) {
+    .close-button {
+        width: 100%;
+        display: flex;
+        height: 10vh;
+        position: fixed;
+        z-index: 99;
+        cursor: pointer;
+        bottom: 0px;
+        background-color: #272727;
+        text-align: center;
+    }
+    .close-button-text {
+        padding-top: 20px;
+    }
     .project-images {
         width: 80vw;
     }
@@ -772,6 +778,8 @@ p.copyright {
         margin-right: 0;
         padding-left: 0;
         padding-right: 0;
+        margin-bottom: 0px;
+        margin-top: 0px;
     }
     .bio-poster {
         padding-left: 0;
@@ -856,7 +864,7 @@ p.copyright {
     }
     .skill-list {
         flex-direction: column;
-        align-items: flex-start;
+        text-align: center;
         width: 100%;
         margin: auto;
     }
